Reformat code to Style guides.